--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1 class="heading">Hello, Vite!</h1>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
