--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1 class="heading text-2xl">Hello, Vite!</h1>
+		<p class="text-white">%VITE_API_URL%</p>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
