--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1 class="heading text-2xl">Hello, Vite!</h1>
 		<p class="text-white">%VITE_API_URL%</p>
+
+		<!-- VUE APP -->
+		<div id="app"></div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
